fix to avoid content cut-off on small screen

--- a/style.css
+++ b/style.css
@@ -28,12 +28,8 @@
   --fw-bold: 700;
 }
 
-html,
 body {
-  height: 100%;
-}
-
-body {
+  min-height: 100vh;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
